--- a/Demologin/views/home.ejs
+++ b/Demologin/views/home.ejs
@@ -5,29 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
+    <title>Home</title>
 </head>
 <body>
-    
-    <form action="/" method="post" name="form1">
-        
-        <form>
+         <form action="/" method="post" name="form2">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="Enter email"  value="" required>
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="Password"  value="" required>
             </div>
-            
-            
+            <button type="submit" class="btn btn-primary">Login</button>
+            <a href="/signup" class="btn btn-primary">Signup</a>
           </form>
-
-        <a href="login" class="btn btn-success ml-2">Login</a>
-          <a href="/signup" class="btn btn-primary">Signup</a>
         
-    
+        
+          
 </body>
 </html>
