--- a/Demologin/views/signup.ejs
+++ b/Demologin/views/signup.ejs
@@ -11,18 +11,22 @@
     <form action="/signup" method="post" name="form1">
         <div class="form-group">
         <label for="exampleInputName">Name</label>
-        <input type="text" name="name" class="form-control"  placeholder="Enter name" value="">
+        <input type="text" name="name" class="form-control"  placeholder="Enter name" value="" required>
         </div>   
         <div class="form-group">
         <label for="exampleInputEmail1">Email</label>
-        <input type="email" name="email" class="form-control"  placeholder="Enter email" value="">
+        <input type="email" name="email" class="form-control"  placeholder="Enter email" value="" required>
         </div>
         <div class="form-group">
         <label for="exampleInputPassword">Password</label>
-        <input type="password" name="password" class="form-control"  placeholder="*********" value="">
+        <input type="password" name="password" class="form-control"  placeholder="*********" value="" required>
         </div>
+        <div class="form-group">
+            <label for="exampleInputPhone">Phone</label>
+            <input type="phone" name="phone" class="form-control"  placeholder="*********" value="" required>
+            </div>
         <input type="submit" class="btn btn-primary" value="Submit">
         <a href="/" class="btn btn-success ml-2">Login</a>
-        
+        </form>
 </body>
 </html>
